<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.TeacherMainView">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:text="logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:text="My account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePictureTeacher"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureTeacher" />

    <ImageButton
        android:id="@+id/btnSubjects"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/subjects"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTeacherMeetings"
        app:srcCompat="@mipmap/subjects" />

    <ImageButton
        android:id="@+id/btnTeacherMeetings"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/my_meetings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentials"
        app:srcCompat="@mipmap/meetings" />

    <ImageButton
        android:id="@+id/btnPrice"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/setPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTeacherTerms"
        app:srcCompat="@mipmap/price" />

    <ImageButton
        android:id="@+id/btnTeacherTerms"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/addTerm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentials"
        app:srcCompat="@mipmap/terms" />

</androidx.constraintlayout.widget.ConstraintLayout>